[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/kinderp/python-package-tutorial
author = Antonio
author_email = "Antonio" <a.caristia@gmail.com>
description = A tutorial on how to build python packages
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License
[options]
package_dir =
    =src
packages = find:
install_requires =
    googletrans>=3.1.a0,<4
include_package_data = True
[options.packages.find]
where = src
exclude = test*
[options.entry_points]
console_scripts =
    say = imppkg.say:main
[tool:pytest]
testpaths = test
addopts = --cov
[coverage:run]
source = imppkg
branch = True
[coverage:report]
show_missing = True
skip_covered = True
[coverage:paths]
source =
    src/imppkg/
    .venv/*/python3.9/site-packages/imppkg/
